# snakemake-storage-plugin-rucio

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-prs.yml  release-please.yml  zizmor.yml
snakemake_storage_plugin_rucio/: __init__.py  rucio_quote.py
tests/: test_plugin.py
