[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[project]
name = "snakemake-storage-plugin-rucio"
version = "0.5.3"
description = "A Snakemake storage plugin that handles files available through Rucio."
authors = [
    { name = "Bouwe Andela", email = "b.andela@esciencecenter.nl" },
    { name = "Valentin Pestel", email = "valentinpestel@gmail.com" },
    { name = "Dmitry Kalinkin", email = "dmitry.kalinkin+snakemake@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<4.0"
keywords = [
    "snakemake",
    "plugin",
    "storage",
    "rucio-clients",
]
dependencies = [
    "rucio-clients>=36",
    "snakemake>=9.5.1",
    "snakemake-interface-common>=1.18.0",
    "snakemake-interface-storage-plugins>=4.2.1",
]

[project.optional-dependencies]
dev = [
    "coverage>=7",
    "pre-commit>=4",
    "pytest>=8",
    "pytest-cov>=6",
]

[project.urls]
repository = "https://github.com/snakemake/snakemake-storage-plugin-rucio"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/rucio.html"

[tool.coverage.run]
source = ["snakemake_storage_plugin_rucio"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "INP001",
    "TC",
    "COM812",  # Conflicts with the formatter.
    "D203",    # Conflicts with the formatter.
    "D211",
    "D213",
    "E501",    # Disable line-too-long as this is taken care of by the formatter.
]
[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101",     # Use of assert in tests code is required.
    "T20",      # Printing things can help with debugging tests.
    "SLF001",   # Testing private members is ok
    "PLR2004",  # Magic values in tests are fine.
]

[tool.ruff.lint.isort]
known-first-party = ["snakemake-storage-plugin-rucio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
